--- a/load-deploy.yaml
+++ b/load-deploy.yaml
@@ -1,7 +1,7 @@
 apiVersion: apps/v1
 kind: Deployment
 metadata:
-  name: load-test
+  generateName: load-gen-
   labels:
     app: loadtest
     name: load-test
